# td-archive-server

./: Cargo.toml  Dockerfile  INSTALL  README.md  build.rs  k8s-cron.yaml  k8s-serving.yaml
collect_td_feed/: .gitignore  Dockerfile  INSTALL  Makefile  collect_td_feed.py  k8s.yaml
proto/: td_feed.proto  td_index.proto
src/: archive.rs  common.rs  health.rs  main.rs  mktdarchive.rs  preserve.rs  recent.rs  server.rs  td-archive-backup.rs
