[package]
name = "td-archive-server"
version = "0.1.0"
edition = "2021"

[dependencies]
array-init = "2.1"
async-stream = "0.3"
boxcar = "0.2"
bytes = "1.6"
chrono = "0.4"
dirs-sys = "0.4.1"
env_logger = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
lru = "0.12"
memmap = "0.7"
prost = "0.11"
prost-types = "0.11"
regex = "1.10"
tempfile = "3.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
tower = "0.4"
xz = "0.1"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "mktdarchive"
path = "src/mktdarchive.rs"
